--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "django-rag"
 version = "0.1.0"
-description = ""
+description = "A RAG Model based on Django Documentation"
 authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -11,6 +12,7 @@ langchain = "^0.1.16"
 langchain-community = "^0.0.34"
 langchain-openai = "^0.1.4"
 chromadb = "^0.5.0"
+streamlit = "^1.33.0"
 
 
 [build-system]
